fix overflow problem

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,11 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body {
-  height: 100%;
-  margin: 0;
-}
-
 body {
   @apply bg-gradient-to-r from-light-blue to-soft-purple;
   display: flex;
